# Qt

AirportInspector/: CMakeLists.txt  db.cpp  db.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondaryform.cpp  secondaryform.h  secondaryform.ui  stopwatch.cpp  stopwatch.h
task10/10_TCPserver_Source/: CMakeLists.txt  main.cpp  structs.h  tcpserver.cpp  tcpserver.h
task10/PreTCPclient/: main.cpp  mainwindow.cpp  mainwindow.h  structs.h  tcpclient.cpp  tcpclient.h
task2/task2/: CMakeLists.txt  main.cpp
task3/: CMakeLists.txt  mainwindow.ui
task4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
task5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  signals.cpp  signals.h  stopwatch.cpp  stopwatch.h
task6/: CMakeLists.txt  ExampleRace.cpp  ExampleRace.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
task7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
task8/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
task9/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
